# mcp-sharepoint

./: AZURE_PORTAL_GUIDE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mcp_sharepoint/: common.py  server.py  setup.py
