[project]
name = "mcp-sharepoint"
version = "0.1.8"
description = "MCP Server to integrate with SharePoint"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp>=1.2.1",
    "office365-rest-python-client>=2.6.1",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[[project.authors]]
name = "Chi Ejimofor"
email = "chi@peacockery.studio"

[project.urls]
Homepage = "https://github.com/chikingsley/mcp-sharepoint"
Repository = "https://github.com/chikingsley/mcp-sharepoint"
Issues = "https://github.com/chikingsley/mcp-sharepoint/issues"

[project.scripts]
mcp-sharepoint = "mcp_sharepoint:main"
mcp-sharepoint-setup = "mcp_sharepoint.setup:setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a31",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastMCP)
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_sharepoint"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
